fix scrollbar colors

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,13 @@
 /* Bootstrap 5.3 doesn't yet have native support for dark tables */
 
+[data-bs-theme="dark"] {
+    color-scheme: dark;
+}
+
+[data-bs-theme="light"] {
+    color-scheme: light;
+}
+
 [data-bs-theme="dark"] .table-success {
     --bs-table-color: var(--bs-success-text);
     --bs-table-bg: var(--bs-success-bg-subtle);
